--- a/sdooauth2-poc/src/main/resources/application.yml
+++ b/sdooauth2-poc/src/main/resources/application.yml
@@ -2,4 +2,7 @@ server:
   port: 8081
   servlet:
     contextPath: /auth
-   
+spring:
+  datasource:
+    url: jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
+    driver-class-name: org.h2.Driver
