--- a/sdooauth2-poc/src/main/resources/application.yml
+++ b/sdooauth2-poc/src/main/resources/application.yml
@@ -1,8 +1,7 @@
-server:
-  port: 8081
-  servlet:
-    contextPath: /auth
 spring:
-  datasource:
-    url: jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
-    driver-class-name: org.h2.Driver
+  flyway:
+    enabled: true
+    clean-on-validation-error: true
+    locations:
+    - classpath:db/migration
+    validate-on-migrate: true
