add test class on all architecture stack layers

--- a/sdooauth2-poc/docker-compose.yml
+++ b/sdooauth2-poc/docker-compose.yml
@@ -8,3 +8,5 @@ services:
     - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: 12345678
+    volumes:
+      - /storage/docker/mysql-datadir:/var/lib/mysql
