--- a/sdooauth2-poc/src/main/resources/application-prod.yml
+++ b/sdooauth2-poc/src/main/resources/application-prod.yml
@@ -6,8 +6,11 @@ server:
   port: 8080
   servlet:
     contextPath: /prod
-    
 spring:
+  flyway:
+    enabled: true
+    clean-on-validation-error: true
+    validate-on-migrate: true
   datasource:
     url: jdbc:mysql://localhost:3306/productiondb?useSsl=false
     driver-class-name: com.mysql.jdbc.Driver
@@ -17,7 +20,18 @@ spring:
   h2:
     console:
       enabled: false
+  test:
+    database:
+      replace: none
   jpa:
+    properties:
+      javax:
+        persistence:
+          schema-generation:
+            create-source: metadata
+            scripts:
+              action: create
+              create-target: target/ddl-mysql.sql
     hibernate:
       ddl-auto: none
     database: mysql
