improved feign with ribbon clinet

--- a/sdooauth2-poc/src/main/resources/application.yml
+++ b/sdooauth2-poc/src/main/resources/application.yml
@@ -4,3 +4,8 @@ spring:
     - dev
   application:
     name: city-service
+counter-service:
+  ribbon:
+    listOfServers: http://localhost:9090,http://localhost:9091
+  eureka:
+    enabled: false
