--- a/sdooauth2-poc/src/main/resources/application.yml
+++ b/sdooauth2-poc/src/main/resources/application.yml
@@ -9,3 +9,7 @@ counter-service:
     listOfServers: http://localhost:9090,http://localhost:9091
   eureka:
     enabled: false
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
